deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: framework-educativo-gateway
  labels:
    app: framework-educativo-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: framework-educativo-gateway
  template:
    metadata:
      labels:
        app: framework-educativo-gateway
    spec:
      containers:
        - name: framework-educativo-gateway
          image: tronxi/framework-educativo-gateway:${GATEWAY_TAG}
          resources:
            limits:
              cpu: "0.4"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "400Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8079
            initialDelaySeconds: 90
            periodSeconds: 30

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8079
            initialDelaySeconds: 90
            periodSeconds: 30
          ports:
            - name: gateway
              containerPort: 8079
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: framework-educativo-gateway
spec:
  type: NodePort
  selector:
    app: framework-educativo-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8079
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: framework-educativo-gateway-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: framework-educativo-gateway-global
    networking.gke.io/managed-certificates: framework-educativo-gateway-certificate
spec:
  backend:
    serviceName: gateway-service
    servicePort: 80
